Update import path for types in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib",
     "umd"
   ],
-  "types": "types/index.d.ts",
+  "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
